# recall

./: .gitignore  README.md
cli/: Cargo.toml  shell.nix
cli/src/: api.rs  cli.rs  display.rs  main.rs
cli/src/commands/: mod.rs  open.rs  save.rs  search.rs
extension/: background.js  manifest.json  options.html  options.js  popup.html  popup.js
server/: Dockerfile  maskfile.md  requirements.txt
server/app/: database.py  main.py  monolith_handler.py
